<resources>
    <string name="app_name">Orange Rent Cars</string>
    <string name="title_activity_test">TestActivity</string>
    <!--<string name="registerTextView"><a href="http://www.google.com/">register</a></string>-->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_add_customer">AddCustomer</string>
    <string name="title_activity_main_title">Orange - Rental Cars</string>
    <string name="title_make_order_fragment">Orange - Make Order</string>
    <string name="title_favorite_models_fragment">Orange - Your Favorite Models</string>
    <string name="title_free_cars_fragment">Orange - Free Cars</string>
    <string name="title_reservation_fragment">Orange - Reservation</string>
    <string name="title_old_reservation_fragment">Orange - Old Reservation</string>
    <string name="title_about_us_fragment">Orange - Contact Us</string>

    <!--menu-->
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_make_order">Make Order</string>
    <string name="menu_free_cars">Free Cars</string>
    <string name="menu_favorite">Favorite Models</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_action">Action</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">My Profile</string>


    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_username">Invalid Username</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--notification-->
    <string name="notification_newBranch">New Branch Added!</string>
    <string name="notification_newBranchContent">Take a Look</string>

    <!--login-->
    <string name="saved_username">username</string>
    <string name="saved_password">password</string>


    <!-- Strings Data -->
    <string name="dataBranches">Branches</string>
    <string name="dataCars">Cars</string>
    <string name="dataCarModels">CarModels</string>

    <!-- Strings Texts -->
    <string name="textHello">Hello,</string>
    <string name="textTotalReservations">Total Reservations:</string>
    <string name="textTotalRentDays">Total Rent Days:</string>
    <string name="textTotalMileage">Total Mileage:</string>
    <string name="textTotalAccidents">Total Accidents:</string>
    <string name="textOldReservation">tap to watch your old reservations</string>
    <string name="textAddModelFavorite">successfully added model:</string>
    <string name="textRemoveModelFavorite">successfully removed model:</string>
    <string name="textCarType">Type</string>
    <string name="textEngineCapacity">Engine</string>
    <string name="textCompany">Company</string>
    <string name="textCustomerDetails">Customer Profile</string>
    <string name="textChooseDataList">Choose Data List To View And Edit:</string>
    <string name="textUserNameAndPassword">Choose User Name And Password For Login</string>
    <string name="textUserName">Create User Name</string>
    <string name="textBranchDetails">Branch Details</string>
    <string name="textReservationDetails">Reservation Details</string>
    <string name="textFreeCars">Free Cars</string>
    <string name="textCarModelDetails">Car Model Details</string>
    <string name="textCarDetails">Car Details</string>
    <string name="textOrderDetails">Order Details</string>
    <string name="textName">Name: </string>
    <string name="textCarId">Car ID: </string>
    <string name="textID">ID: </string>
    <string name="textSeats">Seats: </string>
    <string name="textMaxGasTank">Max Gas Tank: </string>
    <string name="textDialogTitle">Make Order</string>
    <string name="textDialogMessage">Do you want to order this car?</string>
    <string name="textDialogMessageLogout">Do you want logout?</string>
    <string name="textDialogMessageExit">Do you want exit?</string>
    <string name="textSuccessAddBranchMessage">Add Branch Id: </string>
    <string name="textSuccessUpdateBranchMessage">Branch Details have been updated</string>
    <string name="textSuccessUpdateCustomerMessage">Customer Details have been updated</string>
    <string name="textSuccessCreateCarMessage">Create Car Id: </string>
    <string name="textSuccessUpdateCarMessage">Car Details have been updated</string>
    <string name="textSuccessAddReservationMessage">Create New Order\n Id: </string>
    <string name="textSuccessUpdateCarModelMessage">Car Model Details have been updated</string>
    <string name="textSuccessCreateCustomerMessage">Create Customer Id:</string>
    <string name="textFiledAddMessage">Add failed!</string>
    <string name="textFiledCreateMessage">Create failed!</string>
    <string name="textFailedUpdateMessage">Update failed!</string>
    <string name="textLinkSignup">No account yet? Create one</string>
    <string name="textModelCode">Model Code</string>
    <string name="textOrderID">ID</string>
    <string name="textFinishOrder">Finish</string>
    <string name="textReservationID">Order ID:</string>
    <string name="textCloseReservation">Close Reservation, Cost:</string>
    <string name="textCallUs">Call Us:</string>
    <string name="textReadAboutUs">Read About Us:</string>
    <string name="textMail">Mail:</string>
    <string name="textUserNameCompany">Orange User</string>
    <string name="textEditUsername">User Name Details:</string>
    <string name="textEditCustomer">Customer Details</string>
    <string name="textAddress">Address:</string>
    <string name="textCity">City:</string>
    <string name="textStartDay">Start Day:</string>
    <string name="textEndDay">End Day:</string>
    <string name="textBeginMileage">Begin Mileage:</string>
    <string name="textFinishMileage">Finish Mileage:</string>
    <string name="textGasFilled">Gas Filled:</string>
    <string name="textReservationCost">Reservation Cost:</string>
    <string name="textParkingSpace">Parking Space:</string>
    <string name="textBranchName">Branch Name:</string>
    <string name="textModelName">Model Name:</string>
    <string name="textMileage">Mileage:</string>
    <string name="textReservations">Reservations:</string>


    <!-- Strings Hints -->

    <string name="hintName">Name</string>
    <string name="hintCity">City</string>
    <string name="hintAddress">Address</string>
    <string name="hintParkingSpace">Parking Space</string>
    <string name="hintSeats">Num of Seats</string>
    <string name="hintMaxGas">Max Gas Tank</string>
    <string name="hintUserName">User Name</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintFamilyName">Family Name</string>
    <string name="hintCustomerID">ID</string>
    <string name="hintPhone">Phone</string>
    <string name="hintEmail">Email</string>
    <string name="hintCreditCard">Credit Card</string>
    <string name="hintBirthDay">BirthDay</string>
    <string name="hintMileageAmount">Mileage Done</string>
    <string name="hintGasFill">Cost Of Gas</string>

    <!-- Strings Buttons -->
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>

    <string name="buttonAdd">Add</string>
    <string name="buttonOK">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonCreate">Create</string>
    <string name="buttonRemove">Remove</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonAddBranch">Add Branch</string>
    <string name="buttonAddCar">Add Car</string>
    <string name="buttonAddCArModel">Add Car Model</string>
    <string name="buttonManage">Manage</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonFinish">Finish Order</string>
    <string name="buttonLogin">Login</string>
    <string name="ButtonReportAccident">Report an accident</string>

    <!-- Checks boxes -->
    <string name="checkBoxGasFill">Is Gas Fill</string>


    <!-- Strings Exceptions -->
    <string name="exceptionLongLessFileds">Can\'t Be more than 6 digits</string>
    <string name="exceptionMoreFileds">Can\'t Be more than</string>
    <string name="exceptionLessFileds">Can\'t Be less than</string>
    <string name="exceptionZeroOrLessFileds">Can\'t Be only 0 or less</string>
    <string name="exceptionNumberFileds">Can\'t Be only numbers</string>
    <string name="exceptionEmptyFileds">Can\'t Be Empty</string>
    <string name="exceptionInvalidValue">Invalid Value</string>
    <string name="exceptionUserName">User Name Must Be Less Than 25 Characters</string>
    <string name="exceptionPassword">Password Dodn\'t Match</string>
    <string name="exceptionFailedRequest">Failed To Do The Request</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
