<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reservations" />

        <item
            android:id="@+id/nav_make_order"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_make_order" />
        <item
            android:id="@+id/nav_free_cars"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_free_cars" />

    </group>

    <item android:title="@string/menu_action">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_contact_us" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/buttonManage" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
