<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="lugassi.wallach.client_android5778_2638_6575.controller.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription=""
            android:src="@drawable/logo" />

        <!-- Email Label -->
        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintUserName"
            android:inputType="text" />

        <!-- Password Label -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_shape"
            android:padding="12dp"
            android:text="@string/buttonLogin" />

        <TextView
            android:id="@+id/linkSignupTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/textLinkSignup"
            android:textColor="@color/Blue"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/Red"
            android:textSize="22dip"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>
